@@ -40,6 +40,8 @@ Version 1.5.0+svn:
    * added option to do gracefull shut down for server
    * fixed multiplayer_connect to handle leave_game command from server
    * improved reloading of game configs after installing or removing addons
+   * fixed threading bug in upload_logs
+   * dissallow_observers is forced on if side has controller=null
    * Removed bug introduced in 1.5.0 that allowed use of :debug commands during
      network play
    * added some includes to fix compilation problems with Sun Studio 12
